# AAD52402-6376-4EB8-AD86-140E6E322550

./: .gitignore  CMakeLists.txt  Makefile  README.md
CMakeModules/: FindCheck.cmake
src/: CMakeLists.txt  Makefile  romanNumeral.c  romanNumeral.h
tests/: CMakeLists.txt  Makefile  checkRomanNumeral.c
