CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")

PROJECT(RomanNumeral)

MACRO(ADD_UNIT_TEST target_test)
    SET(UNIT_TEST_TARGETS ${UNIT_TEST_TARGETS} ${target_test} PARENT_SCOPE)
ENDMACRO(ADD_UNIT_TEST)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)


ADD_CUSTOM_TARGET(run_all_tests ALL
	DEPENDS ${UNIT_TEST_TARGETS}
)

FOREACH(BLAH ${UNIT_TEST_TARGETS})
ADD_CUSTOM_COMMAND(TARGET run_all_tests
	POST_BUILD COMMAND ${BLAH}
	WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
)
ENDFOREACH(BLAH)
